/*
Copyright 2019 Adobe. All rights reserved.
This file is licensed to you under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License. You may obtain a copy
of the License at http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under
the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
OF ANY KIND, either express or implied. See the License for the specific language
governing permissions and limitations under the License.
*/

import { turnOnReducer, turnOffReducer, toggleReducer } from '../../../../src/builtin/reducers/toggle.reducers';

const openState = {
  store: {
    open: true
  }
};

const closeState = {
  store: {
    open: false
  }
};

const defaultOpenState = {
  construct: {
    defaultValue: true
  },
  store: { }
};

const payload = { payload: {
  construct: 'pickleToggle'
} };

describe('toggleReducers', () => {
  it('should set open to true ', function () {
    expect(turnOnReducer({}, payload))
      .toMatchSnapshot();
  });
  it('should set open to false ', function () {
    expect(turnOffReducer({}, payload))
      .toMatchSnapshot();
  });
  it('should toggle open to false ', function () {
    expect(toggleReducer(openState, payload))
      .toMatchSnapshot();
  });
  it('should toggle open to true ', function () {
    expect(toggleReducer(closeState, payload))
      .toMatchSnapshot();
  });
  it('should use the default value if none is present', function () {
    expect(toggleReducer(defaultOpenState, payload))
      .toMatchSnapshot();
  });
});
